--- a/package.json
+++ b/package.json
@@ -1,18 +1,27 @@
 {
     "private": true,
+    "type": "module",
+    "stackblitz": {
+        "startCommand": "npm start"
+    },
     "scripts": {
-        "dev": "npm run development",
-        "development": "mix",
-        "watch": "mix watch",
-        "watch-poll": "mix watch -- --watch-options-poll=1000",
-        "hot": "mix watch --hot",
-        "prod": "npm run production",
-        "production": "mix --production"
+        "dev": "vite",
+        "build": "vite build"
     },
     "devDependencies": {
-        "axios": "^0.25",
-        "laravel-mix": "^6.0.6",
-        "lodash": "^4.17.19",
-        "postcss": "^8.1.14"
+        "@tailwindcss/forms": "^0.5.2",
+        "alpinejs": "^3.4.2",
+        "autoprefixer": "^10.4.2",
+        "axios": "^1.1.2",
+        "laravel-vite-plugin": "^0.8.0",
+        "postcss": "^8.4.6",
+        "tailwindcss": "^3.1.0",
+        "vite": "^4.0.0",
+        "sass": "^1.54.8"
+    },
+    "dependencies": {
+        "apexcharts": "^3.37.0",
+        "bootstrap": "^5.2.3",
+        "jquery": "^3.6.3"
     }
 }
