--- a/package.json
+++ b/package.json
@@ -15,13 +15,14 @@
         "axios": "^1.1.2",
         "laravel-vite-plugin": "^0.8.0",
         "postcss": "^8.4.6",
+        "sass": "^1.54.8",
         "tailwindcss": "^3.1.0",
-        "vite": "^4.0.0",
-        "sass": "^1.54.8"
+        "vite": "^4.0.0"
     },
     "dependencies": {
         "apexcharts": "^3.37.0",
         "bootstrap": "^5.2.3",
-        "jquery": "^3.6.3"
+        "jquery": "^3.6.3",
+        "tailwind-scrollbar-hide": "^1.1.7"
     }
 }
