--- a/.env.example
+++ b/.env.example
@@ -4,7 +4,7 @@ APP_KEY=
 APP_DEBUG=true
 APP_URL=http://localhost
 APP_URL_QUARTO=http://quarto.arifsaputra.my.id/
-ASSET_URL = 'http://127.0.0.1:8000/assets'
+ASSET_URL=http://127.0.0.1:8000
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
