--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "apexcharts": "^3.37.0",
         "bootstrap": "^5.2.3",
         "jquery": "^3.6.3",
+        "material-symbols": "^0.13.2",
         "tailwind-scrollbar-hide": "^1.1.7",
         "tw-elements": "^1.0.0"
     }
